For #4682: fix some warnings